--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset='utf-8' />
     </head>
     <body>
-        <canvas id='tetris'>update your browser</canvas>
+        <canvas id='NeuroNet'>update your browser</canvas>
         <script type="text/javascript" src="neuron.js"></script>
         <script type="text/javascript" src="perceptron.js"></script>
         <script type="text/javascript" src="main.js"></script>
