--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Perceptron 1</title>
+        <title>Perceptron JS</title>
         <meta charset='utf-8' />
     </head>
     <body>
