--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <canvas id='NeuroNet'>update your browser</canvas>
+        <script type="text/javascript" src="p5.min.js"></script>
         <script type="text/javascript" src="neuron.js"></script>
         <script type="text/javascript" src="perceptron.js"></script>
         <script type="text/javascript" src="main.js"></script>
