feat(SaveAndRestore): NetworkManager class added. Now it is possible to save and restore network state.

--- a/tests.html
+++ b/tests.html
@@ -6,6 +6,7 @@
     <title>NeuroJS Tests</title>
     <script src="neuron.js"></script>
     <script src="perceptron.js"></script>
+    <script src="network-manager.js"></script>
     <script src="tests.js"></script>
     <style>
         body {
